NO-ISSUE fixes
